<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_form"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center|top"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/sign_up_form_title"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:gravity="center"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/familyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_family"
        android:gravity="center"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/mobileEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_mobile"
        android:gravity="center"
        android:inputType="number"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/passEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:gravity="center"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        android:id="@+id/sign_up_btn"/>

</LinearLayout>